[add] booking with input data

--- a/SampleAADv2Bot/Web.config
+++ b/SampleAADv2Bot/Web.config
@@ -14,6 +14,8 @@
     <add key="aad:ClientSecret" value="jpmaEOZFMmgf4eff1ZVhN3m" />
     <add key="aad:Authority" value="https://login.microsoftonline.com/common" />
     <add key="aad:Callback" value="http://localhost:3980/Callback" />
+    <add key="RoomNames" value="{room names}" />
+    <add key="RoomEmails" value="{room emails}"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
