configuring Bot for Bot Framework & S4B

--- a/SampleAADv2Bot/Web.config
+++ b/SampleAADv2Bot/Web.config
@@ -6,14 +6,14 @@
 <configuration>
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
-    <add key="BotId" value="BotAuthSamples" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
+    <add key="BotId" value="fujitsuitbot" />
+    <add key="MicrosoftAppId" value="eca69355-3f96-4579-bab5-8ceb91e94ee1" />
+    <add key="MicrosoftAppPassword" value="5wK16oTeKRebqDBNH6nUivc" />
 
-    <add key="aad:ClientId" value="85db7a2d-d629-42b1-a52a-f19f5c91b0ca" />
-    <add key="aad:ClientSecret" value="jpmaEOZFMmgf4eff1ZVhN3m" />
+    <add key="aad:ClientId" value="a3b2a718-2f84-4f95-8070-e2f31a5b0158" />
+    <add key="aad:ClientSecret" value="y0RREXYHUE9khBCSraeqTRK" />
     <add key="aad:Authority" value="https://login.microsoftonline.com/common" />
-    <add key="aad:Callback" value="http://localhost:3980/Callback" />
+    <add key="aad:Callback" value="https://fjitschedulingbot.azurewebsites.net/Callback" />
     <add key="RoomNames" value="{room names}" />
     <add key="RoomEmails" value="{room emails}"/>
   </appSettings>
