--- a/SampleAADv2Bot/MeetingSchedulingBot.csproj
+++ b/SampleAADv2Bot/MeetingSchedulingBot.csproj
@@ -153,6 +153,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\FJITSchedulingBot - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\FJITSchedulingBot - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
